[gd_scene load_steps=14 format=3 uid="uid://dkyanymbm2486"]

[ext_resource type="Script" uid="uid://c4f76a52e3cgb" path="res://Main/scripts/ship.gd" id="1_m2ip2"]
[ext_resource type="FontFile" uid="uid://dellhoyd1adcj" path="res://Main/shrifti/JakobC_0.otf" id="2_30aio"]
[ext_resource type="Texture2D" uid="uid://c8dccfnr1xdqn" path="res://Main/sprites/корабль целый.png" id="2_fwcos"]
[ext_resource type="Texture2D" uid="uid://bwuatpk67gcku" path="res://Main/sprites/корабль сломаный.png" id="2_q2226"]
[ext_resource type="AudioStream" uid="uid://2tp5um2y64j7" path="res://assets/Sounds/SDdamage-001.ogg" id="5_hnbfk"]
[ext_resource type="AudioStream" uid="uid://c0e11j7vhdia0" path="res://assets/Sounds/SDdamage-002.ogg" id="6_v2mvr"]
[ext_resource type="AudioStream" uid="uid://dld6r51bs6b8s" path="res://assets/Sounds/SDdamage-003.ogg" id="7_03s3l"]
[ext_resource type="AudioStream" uid="uid://bw37qlefl3lpd" path="res://assets/Sounds/SDdamage-004.ogg" id="8_ma0f1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyatb"]
size = Vector2(66, 86)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdaiw"]

[sub_resource type="GDScript" id="GDScript_cdaiw"]
script/source = "extends Label


func _process(delta: float) -> void:
	if $\"../..\".build_progress == 1:
		$\".\".visible = false
		$\"../startlabel2\".visible = true
"

[sub_resource type="GDScript" id="GDScript_30aio"]
script/source = "extends Label

func _process(delta: float) -> void:
	text = str($\"../..\".cost)
"

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pexd8"]
random_pitch = 1.3
random_volume_offset_db = 1.19
streams_count = 4
stream_0/stream = ExtResource("5_hnbfk")
stream_1/stream = ExtResource("6_v2mvr")
stream_2/stream = ExtResource("7_03s3l")
stream_3/stream = ExtResource("8_ma0f1")

[node name="Ship" type="Node2D"]
script = ExtResource("1_m2ip2")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1, 0.64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qyatb")

[node name="labels and buttons" type="Node2D" parent="."]

[node name="Button" type="Button" parent="labels and buttons"]
offset_left = -132.0
offset_top = -82.0
offset_right = 160.0
offset_bottom = 53.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_cdaiw")
flat = true

[node name="startlabel" type="Label" parent="labels and buttons"]
offset_left = -128.0
offset_top = 36.0
offset_right = 152.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("2_30aio")
theme_override_font_sizes/font_size = 16
text = "Нажмите, чтобы починить."
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_cdaiw")

[node name="startlabel2" type="Label" parent="labels and buttons"]
visible = false
offset_left = -128.0
offset_top = 36.0
offset_right = 152.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("2_30aio")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_30aio")

[node name="FixLabel" type="Label" parent="labels and buttons"]
offset_left = -106.0
offset_top = -107.0
offset_right = 113.0
offset_bottom = -84.0
text = "0"
horizontal_alignment = 1

[node name="sprites" type="Node2D" parent="."]

[node name="fixed" type="Sprite2D" parent="sprites"]
visible = false
position = Vector2(-30, -67)
scale = Vector2(1.524, 1.628)
texture = ExtResource("2_fwcos")

[node name="broken" type="Sprite2D" parent="sprites"]
position = Vector2(-19.5, -67.5)
scale = Vector2(1.43952, 1.63281)
texture = ExtResource("2_q2226")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_pexd8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="pressed" from="labels and buttons/Button" to="." method="_on_button_pressed"]
